--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 crossterm = "0.19.0"
+enum-iterator = "0.6.0"
 ordered-float = "2.0.1"
 pathfinding = "2.1.1"
 termion = "1.5.5"
