--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,7 @@ crossterm = "0.19.0"
 enum-iterator = "0.6.0"
 ordered-float = "2.0.1"
 pathfinding = "2.1.1"
+rand = "0.8.3"
+rand_distr = "0.4.0"
 termion = "1.5.5"
 tui = "0.14.0"
